# opman

./: .gitignore  Cargo.toml  README.md  Untitled  install.sh  nohup.out  opencode.json  slack-app-manifest.yaml
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: opman.rb
leptos-ui/: Cargo.toml  Trunk.toml  hash-snippets.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
leptos-ui/public/: manifest.json  sw.js
leptos-ui/src/: app.rs  main.rs  utils.rs
leptos-ui/src/api/: client.rs  editor.rs  files.rs  git.rs  health.rs  intelligence.rs  missions.rs  mod.rs  project.rs  pty.rs  session.rs  session_views.rs  system.rs  watchers.rs  workflows.rs
leptos-ui/src/components/: activity_feed.rs  add_project_entry.rs  add_project_modal.rs  agent_picker_modal.rs  app_loader.rs  assistant_center_modal.rs  auto_open_modal.rs  autonomy_modal.rs  chat_layout.rs  chat_main_area.rs  cheatsheet_modal.rs  code_block.rs  command_palette.rs  context_input_modal.rs  context_window_panel.rs  cross_session_search_modal.rs  debug_overlay.rs  delegation_board_modal.rs  diff_review_panel.rs  error_boundary.rs  git_panel.rs  icons.rs  inbox_modal.rs  memory_modal.rs  message_timeline.rs  message_turn.rs  missions_modal.rs  mobile_dock.rs  mod.rs  modal_layer.rs  modal_overlay.rs  model_picker_modal.rs  notification_prefs_modal.rs  panel_floating_header.rs  permission_dock.rs  process_health_drawer.rs  prompt_input.rs  question_dock.rs  routines_modal.rs  search_bar.rs  (+16 more)
leptos-ui/src/components/chat_sidebar/: callbacks.rs  mod.rs  open_sessions_section.rs  overlays.rs  project_node.rs  project_sessions.rs  session_button.rs  session_row.rs  subagent_list.rs  types.rs
leptos-ui/src/components/code_editor_panel/: actions.rs  actions_ext.rs  actions_reload.rs  cad_viewer.rs  doc_renderers.rs  document_editor.rs  editor_body.rs  editor_toolbar.rs  explorer_ctx.rs  explorer_dir_node.rs  explorer_sidebar.rs  explorer_tree.rs  file_renderers.rs  image_preview.rs  js_helpers.rs  mobile_layout.rs  mobile_overlays.rs  mobile_toolbar.rs  mod.rs  model3d_preview.rs  spreadsheet_editor.rs  state.rs  types.rs
leptos-ui/src/components/code_editor_panel/native_editor/: buffer_state.rs  helpers.rs  highlighter.rs  input.rs  mod.rs  renderer.rs
leptos-ui/src/components/delegation_board_modal/: item_view.rs  mod.rs
leptos-ui/src/components/memory_modal/: helpers.rs  item_view.rs  mod.rs
leptos-ui/src/components/message_timeline/: empty_states.rs  mod.rs  render.rs  scroll.rs  types.rs  virtual_list.rs
leptos-ui/src/components/missions_modal/: helpers.rs  item_view.rs  mod.rs
leptos-ui/src/components/prompt_input/: consts.rs  handlers.rs  history.rs  mod.rs  parts.rs  search.rs  view.rs
leptos-ui/src/components/terminal_panel/: body.rs  header.rs  mod.rs  native_term.rs  pty_bridge.rs  render.rs  screen.rs  types.rs
leptos-ui/src/components/tool_call/: bash_output.rs  bash_view.rs  helpers.rs  mod.rs  sub_components.rs  task_render.rs  todo_view.rs
leptos-ui/src/components/tool_call/a2ui/: blocks.rs  blocks_ext.rs  html_render.rs  html_render_chart.rs  html_render_chart_ext.rs  html_render_coding.rs  html_render_content.rs  html_render_ext.rs  html_render_icons.rs  html_render_interface.rs  html_render_layout.rs  html_render_media.rs  interactive.rs  mermaid.rs  mod.rs
leptos-ui/src/components/watcher_modal/: config_form.rs  mod.rs
leptos-ui/src/hooks/: mod.rs  use_assistant_state.rs  use_auto_open.rs  use_bookmarks.rs  use_chat_callbacks.rs  use_focus_trap.rs  use_keyboard.rs  use_mobile_state.rs  use_modal_state.rs  use_model_state.rs  use_notification_signals.rs  use_panel_state.rs  use_project_context.rs  use_providers.rs  use_pulse_actions.rs  use_resizable.rs  use_swipe_reveal.rs  use_toast.rs  use_virtual_keyboard.rs
leptos-ui/src/hooks/use_back_navigation/: mod.rs  watchers.rs
leptos-ui/src/hooks/use_chat_handlers/: commands.rs  mod.rs  session_actions.rs  transcript.rs
leptos-ui/src/hooks/use_sse_state/: messages.rs  mod.rs  subagent_messages.rs  tracking.rs  types.rs
leptos-ui/src/hooks/use_url_restore/: mod.rs  url_state.rs
leptos-ui/src/pages/: login.rs  mod.rs
leptos-ui/src/sse/: message_map.rs  mod.rs
leptos-ui/src/sse/connection/: app_indicator_listeners.rs  app_listeners.rs  event_handler.rs  mod.rs  session_handlers.rs
leptos-ui/src/theme/: apply.rs  icons.rs  mod.rs  system_listener.rs
leptos-ui/src/types/: api.rs  core.rs  events.rs  mod.rs
leptos-ui/styles/: a2ui-1.css  a2ui-2.css  a2ui-3.css  a2ui-4.css  activity-feed.css  add-project.css  app-shell.css  assistant-1.css  assistant-2.css  autonomy.css  base-1.css  base-2.css  chat-layout.css  cheatsheet.css  code-editor-1.css  code-editor-2.css  code-editor-3.css  code-editor-4.css  code-editor-5.css  command-palette.css  context-window-1.css  context-window-2.css  cross-session.css  debug-panel.css  delegation.css  diff-review-1.css  diff-review-2.css  git-panel-1.css  git-panel-2.css  git-panel-3.css  git-panel-4.css  index.css  light-theme.css  login.css  main.css  memory-1.css  messages-1.css  messages-2.css  messages-3.css  misc.css  (+44 more)
leptos-ui/tests/: chat-ui.spec.ts  helpers.ts  send-message.spec.ts  session-switching.spec.ts  slash-commands.spec.ts
src/: api.rs  app.rs  background_tasks.rs  cli.rs  command_palette.rs  config.rs  event_input.rs  event_loop.rs  event_mouse.rs  input.rs  main.rs  mcp.rs  mcp_neovim.rs  mcp_skills.rs  mcp_time.rs  mouse_handler.rs  nvim_rpc.rs  preflight.rs  pty.rs  server.rs  setup.rs  slack.rs  sse.rs  theme.rs  theme_gen.rs  todo_db.rs  util.rs  vim_mode.rs  which_key.rs
src/api/: interactions.rs  messages.rs  mod.rs  queries.rs  sessions.rs
src/app/: accessors.rs  background.rs  background_event.rs  background_sse.rs  background_sse_slack.rs  completions.rs  context_input.rs  helpers.rs  helpers_tests.rs  mcp_handler.rs  mcp_operations.rs  mod.rs  (+23 more)
themes/: bash_integration.sh  opencode.zsh
web-ui/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
(+607 files in other folders)
