[package]
name = "opman"
version = "0.6.1"
edition = "2021"
description = "Terminal multiplexer wrapper for the opencode CLI — multi-project management"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
futures = "0.3"
nucleo = "0.5"
ignore = "0.4"
asyncgit = "0.28.0"
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
include_dir = "0.7"
similar = "2"
rmpv = "1.3"
rmp = "0.8"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde_yaml = "0.9"
url = "2"
open = "5"
rand = "0.8"
axum = { version = "0.8", features = ["tokio", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
rust-embed = { version = "8", features = ["interpolate-folder-path", "compression"] }
mime_guess = "2"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }

# vt100's visible_rows() has a usize subtraction that wraps when scrollback_offset > rows_len.
# In release mode this is correct (wrapping gives usize::MAX, take(usize::MAX) takes all rows).
# In debug mode it panics. Disable overflow checks for vt100 only.
[profile.dev.package.vt100]
overflow-checks = false

[profile.release]
# Optimise aggressively for size.
opt-level = "z"          # "z" = size over speed (smaller than "s")
lto = true               # fat LTO: maximum dead-code removal across all crates
codegen-units = 1        # single CGU = more inlining + DCE across the whole crate
panic = "abort"          # removes unwinding machinery (~saves ~10-15% on Rust binaries)
strip = true             # remove all symbols + debug info from release binary
debug = false            # no DWARF debug info in release
