[package]
name = "leptos-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlLinkElement",
    "BlobPropertyBag",
    "ServiceWorker",
    "EventSource",
    "MessageEvent",
    "Event",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "AbortController",
    "AbortSignal",
    "Storage",
    "Location",
    "History",
    "Url",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "FocusEvent",
    "InputEvent",
    "ClipboardEvent",
    "DragEvent",
    "CustomEvent",
    "CssStyleDeclaration",
    "DomRect",
    "MediaQueryList",
    "ResizeObserver",
    "ResizeObserverEntry",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "Clipboard",
    "Navigator",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "FormData",
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "HtmlSelectElement",
    "HtmlFormElement",
    "ScrollBehavior",
    "ScrollToOptions",
    "VisibilityState",
    "Selection",
    "Range",
    "NodeList",
    "HtmlCollection",
    "Performance",
    "PerformanceTiming",
    "SubmitEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
send_wrapper = "0.6"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
futures = "0.3"
floem-editor-core = "0.2"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
vt100 = "0.16"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
